Added Image storage service for Cloudinary

--- a/pom.xml
+++ b/pom.xml
@@ -359,7 +359,12 @@
             <artifactId>cucumber-spring</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- jhipster-needle-maven-add-dependency -->
+        <!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
