--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -143,3 +143,9 @@ jhipster:
 # ===================================================================
 
 application:
+    cloudinary:
+        api-key: 147884793894633
+        api-secret: RsMPV7slJLmzxtfbA-RFCWrcPNE
+        name: dhgzlngmh
+        flower-folder: dev/flower/
+        sighting-folder: dev/sighting/
